# couchdb_backup

./: .gitignore  README.md
src/rust/: .gitignore  Cargo.toml  udeps.sh
src/rust/common_macros/: Cargo.toml
src/rust/common_macros/src/: declare_env_settings.rs  lib.rs
src/rust/couchdb_backup/: Cargo.toml  config.sample.yaml
src/rust/couchdb_backup/src/: lib.rs  main.rs
src/rust/s3_bucket/: Cargo.toml
src/rust/s3_bucket/src/: lib.rs
src/sh/: couchdb_backup.sh
