[package]
name = "couchdb_backup"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
# aws_lambda_events = { version = "0.10.0", default-features = false, features = ["cloudwatch_events"] }
#
# lambda_runtime = "0.8.1"

anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
clap = { version = "4.0", features = ["derive"] }
common_macros = { path = "../common_macros" }
arrange_millis = { path = "../arrange_millis" }
paste = "1"
lazy_static = "1"
config = "0.13"
serde = { version = "1", features = ["derive"], default-features = false }
couch_rs = "0.9"
regex = "1"
serde_json = "1"
flate2 = "1"
s3_bucket = { path = "../s3_bucket" }
chrono = "0.4"
chrono-tz = "0.8"

