[package]
name = "couchdb_backup"
version = "0.1.1"
# 0.1.1 - removed support of timezone
# 0.1.0 - initial version: implemented https://github.com/yurybikuzin/couchdb_backup#%D1%82%D1%80%D0%B5%D0%B1%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F-%D0%BA-%D1%80%D0%B5%D0%B0%D0%BB%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D0%B8 and https://github.com/yurybikuzin/couchdb_backup#%D1%82%D1%80%D0%B5%D0%B1%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F-%D0%BA-%D0%BA%D0%BE%D0%BD%D1%84%D0%B8%D0%B3-%D1%84%D0%B0%D0%B9%D0%BB%D1%83-%D1%83%D1%82%D0%B8%D0%BB%D0%B8%D1%82%D1%8B
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
# aws_lambda_events = { version = "0.10.0", default-features = false, features = ["cloudwatch_events"] }
#
# lambda_runtime = "0.8.1"

anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
clap = { version = "4.0", features = ["derive"] }
common_macros = { path = "../common_macros" }
arrange_millis = { path = "../arrange_millis" }
paste = "1"
lazy_static = "1"
config = "0.13"
serde = { version = "1", features = ["derive"], default-features = false }
couch_rs = "0.9"
regex = "1"
serde_json = "1"
flate2 = "1"
s3_bucket = { path = "../s3_bucket" }
chrono = "0.4"

