#cargo-features = ["edition2021"]

[package]
name = "s3_bucket"
version = "0.3.0"
# 0.3.0 - removed common_macro dependency
# 0.2.0 - updated crates, fixed clippy issues
authors = ["Yury Bikuzin <yury.bikuzin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1.0"

bytes = "1"
rusoto_s3 = { version = "0.48", default_features=false, features = [ "rustls" ] }
rusoto_core = { version="0.48", default_features=false, features=[ "rustls" ] }
tokio = { version = "1", features = ["full"] }

futures = { version = "0.3" }
tokio-util = { version = "0.7", features = ["codec"] }
chrono = "0.4"

